SOLR-17803: Fix native access warning when using MemorySegmentIndexInput (#3360)